Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -727,13 +727,132 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 17298번 오큰수\n",
+        "#문제 URL : https://www.acmicpc.net/problem/17298\n",
+        "\n",
+        "#시간초과\n",
+        "import sys\n",
+        " \n",
+        "num_ = int(input())\n",
+        "list_ = list(map(int,input().split())) \n",
+        "#list(map(int, sys.stdin.readline().split()))\n",
+        "re_ = []\n",
+        "for i in range(num_):\n",
+        "  number_ = list_[i]\n",
+        "  bool_ = False\n",
+        "  for j in range(i+1,num_):\n",
+        "    number_2 = list_[j] \n",
+        "    if(number_ < number_2):\n",
+        "      re_.append(number_2)\n",
+        "      bool_ = True\n",
+        "      break\n",
+        "  if bool_ == False:\n",
+        "    re_.append(-1)    \n",
+        "print(*re_)\n",
+        "\n",
+        "#다른 풀이 \n",
+        "num_ = int(input()) \n",
+        "number_ = list(map(int, input().split()))\n",
+        "stack = [];\n",
+        "re_ =[-1] * num_  \n",
+        "for i in range(num_): \n",
+        "  while stack and number_[stack[-1]] < number_[i]:\n",
+        "     re_[stack.pop()] = number_[i] \n",
+        "  stack.append(i) \n",
+        "print(*re_)\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4xkpc_MaWjBX",
+        "outputId": "04b33ec3-2112-4a78-ab47-6ae05c1ff3b7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "3 5 2 7\n",
+            "5 7 7 -1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2164번 카드2\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2164\n",
+        "\n",
+        "from collections import deque\n",
+        "import sys\n",
+        "\n",
+        "num_ = int(input())\n",
+        "deq = deque(list(map(lambda x: x, range(1, num_+1))))  \n",
+        "while len(deq) != 1:\n",
+        "  #맨위 버리기\n",
+        "  deq.popleft() \n",
+        "  #다음 카드 \n",
+        "  deq.append(deq[0])\n",
+        "  deq.popleft()\n",
+        "print(deq[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PRcesrL-ffbc",
+        "outputId": "3c9ea1f9-9ac4-4e74-d671-ce81b6340d26"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "KclWZCcqs8DH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4PampcmywGzA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmXR8yRWWUUT0FOcnM1cJ1",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyME7urNgcuIHP4/RoJ/DT+O",
       "include_colab_link": true
     },
     "kernelspec": {
