Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -773,7 +773,7 @@
         "id": "4xkpc_MaWjBX",
         "outputId": "04b33ec3-2112-4a78-ab47-6ae05c1ff3b7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +812,7 @@
         "id": "PRcesrL-ffbc",
         "outputId": "3c9ea1f9-9ac4-4e74-d671-ce81b6340d26"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,13 +827,37 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "#백준 11866번 요세푸스 문제\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11866\n",
+        " \n",
+        "A, B = map(int,input().split()) \n",
+        "list_ = list(map(lambda x: x, range(1, A+1)))\n",
+        "num_ = 0 \n",
+        "re_ = [] \n",
+        "while len(list_) != 0:\n",
+        "  num_ = (num_ + (B-1)) % len(list_) \n",
+        "  number_ = list_.pop(num_) \n",
+        "  re_.append(str(number_))  \n",
+        "print('<'+ ', '.join(map(str, re_)) + '>') "
       ],
       "metadata": {
-        "id": "KclWZCcqs8DH"
+        "id": "KclWZCcqs8DH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9ff2627c-b9d5-4eaf-c9a7-b6ff7677cacd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 3\n",
+            "<3, 6, 2, 7, 5, 1, 4>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -852,7 +876,7 @@
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyME7urNgcuIHP4/RoJ/DT+O",
+      "authorship_tag": "ABX9TyPEWWqrWe2eDbWFe/XkGDez",
       "include_colab_link": true
     },
     "kernelspec": {
