Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -847,7 +847,7 @@
         },
         "outputId": "9ff2627c-b9d5-4eaf-c9a7-b6ff7677cacd"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,13 +862,56 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#백준 1966번 프린터 큐\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1966\n",
+        "\n",
+        "num_ = int(input())\n",
+        "\n",
+        "for _ in range(num_):\n",
+        "    N, M = map(int,input().split())  \n",
+        "    list_ = list(map(int,input().split()))\n",
+        "    re_ = [i for i in range(N)]\n",
+        "    re_[M] = 'an'  \n",
+        "    count=0\n",
+        "    while list_:\n",
+        "        if list_[0] == max(list_):\n",
+        "            count+=1 \n",
+        "            if re_[0] == 'an':\n",
+        "                print(count)\n",
+        "                break \n",
+        "            list_.pop(0)\n",
+        "            re_.pop(0)\n",
+        "        else:\n",
+        "            list_.append(list_.pop(0))\n",
+        "            re_.append(re_.pop(0)) \n",
+        "     "
       ],
       "metadata": {
-        "id": "4PampcmywGzA"
+        "id": "FDU7caRjcR-i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2bc86602-0621-471d-84fc-a56d8bd145de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "1 0\n",
+            "5\n",
+            "1\n",
+            "4 2\n",
+            "1 2 3 4\n",
+            "2\n",
+            "6 0\n",
+            "1 1 9 1 1 1 \n",
+            "5\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -876,7 +919,7 @@
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEWWqrWe2eDbWFe/XkGDez",
+      "authorship_tag": "ABX9TyPSobuaaDDOQxQcbrlSZpup",
       "include_colab_link": true
     },
     "kernelspec": {
