Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -887,31 +887,95 @@
         "     "
       ],
       "metadata": {
-        "id": "FDU7caRjcR-i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2bc86602-0621-471d-84fc-a56d8bd145de"
+        "id": "FDU7caRjcR-i"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "1 0\n",
-            "5\n",
-            "1\n",
-            "4 2\n",
-            "1 2 3 4\n",
-            "2\n",
-            "6 0\n",
-            "1 1 9 1 1 1 \n",
-            "5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1002번 터렛\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1002\n",
+        "import math\n",
+        "\n",
+        "num_ = int(input())\n",
+        "\n",
+        "for _ in range(num_):\n",
+        "  x_1, y_1, r_1, x_2, y_2, r_2 = map(int,input().split())\n",
+        "  # 두 원의 중심 거리\n",
+        "  dis_ = math.sqrt((x_1 - x_2)**2 + (y_1 - y_2)**2)\n",
+        "  if dis_ == 0:\n",
+        "    # 두 원의 크가기 같아 겹침\n",
+        "    if r_1 == r_2: \n",
+        "        print(-1)\n",
+        "    else:                     \n",
+        "        print(0)\n",
+        "  else:\n",
+        "    #abs = 절대값\n",
+        "    if r_1 + r_2 == dis_ or abs(r_2-r_1) == dis_:\n",
+        "        print(1)\n",
+        "    elif ((abs(r_1-r_2) < dis_) and (dis_ < r_1+r_2)):\n",
+        "        print(2)\n",
+        "    else:\n",
+        "        print(0)"
+      ],
+      "metadata": {
+        "id": "b2cckeupxyeg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 10866번 데크\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10866\n",
+        "\n",
+        "from collections import deque\n",
+        "import sys\n",
+        "\n",
+        "deq = deque()\n",
+        "num_ = int(sys.stdin.readline())\n",
+        "for _ in range(num_):\n",
+        "  D = list(sys.stdin.readline().split())\n",
+        "  if D[0] == 'push_front':\n",
+        "    deq.appendleft(D[1])\n",
+        "  elif D[0] == 'push_back':\n",
+        "    deq.append(D[1])\n",
+        "  elif D[0] == 'pop_front':\n",
+        "    try:\n",
+        "      print(deq.popleft())\n",
+        "    except:\n",
+        "      print(-1)\n",
+        "  elif D[0] == 'pop_back':\n",
+        "    try:\n",
+        "      print(deq.pop())\n",
+        "    except:\n",
+        "      print(-1)\n",
+        "  elif D[0] == 'size':\n",
+        "    print(len(deq))\n",
+        "  elif D[0] == 'empty':\n",
+        "    if not deq:\n",
+        "      print(1)\n",
+        "    else:\n",
+        "      print(0)\n",
+        "  elif D[0] == 'front':\n",
+        "    try:\n",
+        "      print(deq[0])\n",
+        "    except:\n",
+        "      print(-1)\n",
+        "  elif D[0] == 'back':\n",
+        "    try:\n",
+        "      print(deq[-1])\n",
+        "    except:\n",
+        "      print(-1)"
+      ],
+      "metadata": {
+        "id": "5nRNCNvWFGm_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -919,7 +983,7 @@
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPSobuaaDDOQxQcbrlSZpup",
+      "authorship_tag": "ABX9TyO8B8lRtxU750QJeJnk6Z3C",
       "include_colab_link": true
     },
     "kernelspec": {
