Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -976,6 +976,103 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1021번 회전하는 큐 \n",
+        "#문제 URL : https://www.acmicpc.net/problem/1021\n",
+        "\n",
+        "from collections import deque\n",
+        "import sys \n",
+        " \n",
+        "n,m = list(sys.stdin.readline().split())\n",
+        "list_1 = list(sys.stdin.readline().split())\n",
+        " \n",
+        "deq = deque([i for i in range(1, n+1)])   \n",
+        "\n",
+        "count_ = 0\n",
+        "for i in list_1:\n",
+        "  while True:\n",
+        "    if deq[0] == i:\n",
+        "      deq.popleft()\n",
+        "      break\n",
+        "    else:\n",
+        "      if deq.index(i) < len(deq)/2:  \n",
+        "          while deq[0] != i:    \n",
+        "              deq.append(deq.popleft())  \n",
+        "              count_ += 1\n",
+        "      else:    \n",
+        "          while deq[0] != i:\n",
+        "              deq.appendleft(deq.pop())  \n",
+        "              count_ += 1\n",
+        "print(count_) "
+      ],
+      "metadata": {
+        "id": "0Wz9uh32oep5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 5430번 AC\n",
+        "#문제 URL : https://www.acmicpc.net/problem/5430\n",
+        "from collections import deque\n",
+        "import sys \n",
+        "\n",
+        "num_ = int(input())  \n",
+        "for _ in range(num_):\n",
+        "    #p = sys.stdin.readline().rstrip()\n",
+        "    #arr = deque(sys.stdin.readline().rstrip()[1:-1].split(\",\"))\n",
+        "    str_ = input()\n",
+        "    str_ = str_.replace('RR','')\n",
+        "    number_ = int(input()) \n",
+        "    arr_ =  deque(input()[1:-1].split(\",\"))\n",
+        "    SC_ = True\n",
+        "    rev = 0\n",
+        "    if number_ ==0:\n",
+        "        arr_ = [] \n",
+        "    for i in str_:\n",
+        "      if i == 'R': \n",
+        "        rev += 1\n",
+        "      else:\n",
+        "        if len(arr_) < 1:\n",
+        "          print('error')\n",
+        "          SC_ = False\n",
+        "          break \n",
+        "        else:\n",
+        "          if rev % 2 == 0:\n",
+        "             arr_.popleft() \n",
+        "          else:\n",
+        "             arr_.pop()   \n",
+        "    if SC_:\n",
+        "      if rev % 2 != 0:\n",
+        "        arr_.reverse()\n",
+        "      print(\"[\" + \",\".join(arr_) + \"]\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uec1joaft-v4",
+        "outputId": "98cd92c5-49e4-4d1a-c2e8-60886d2bff3f"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "RDD\n",
+            "4\n",
+            "[1,2,3,4]\n",
+            "[2,1]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -983,7 +1080,7 @@
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO8B8lRtxU750QJeJnk6Z3C",
+      "authorship_tag": "ABX9TyP3+0ppsIfA0Kvj8JDNUleZ",
       "include_colab_link": true
     },
     "kernelspec": {
