--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1100,7 +1100,7 @@
         },
         "outputId": "10754d2d-917f-4065-cd9b-2138f963e2c2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1110,6 +1110,86 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11725번 트리의 부모 찾기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11725\n",
+        "import sys\n",
+        "input=sys.stdin.readline\n",
+        "sys.setrecursionlimit(10**9)\n",
+        "\n",
+        "#입력인자 받고\n",
+        "num_ = int(input())\n",
+        "\n",
+        "#트리, 부모트리 생성\n",
+        "tree_ = [[] for _ in range(N+1)]\n",
+        "p_tree_ = [0 for _ in range(N+1)] \n",
+        "\n",
+        "#인자 받고 트리에 저장\n",
+        "for _ in range(num_-1):\n",
+        "  A, B =  map(int, input().split())\n",
+        "  tree_[A].append(B)\n",
+        "  tree_[B].append(A) \n",
+        "#DFS를 통해서 tree_에 저장된 하나의 [] 씩 받아와 재귀를 통해 돌면서 부모에 저장\n",
+        "def DFS_(start, Tree_, p_Tree):\n",
+        "  for i in Tree_[start]:\n",
+        "    if p_tree_[i] == 0:\n",
+        "      p_tree_[i] = start\n",
+        "      DFS_(i, Tree_, p_tree_)  \n",
+        "DFS_(1,tree_,p_tree_)\n",
+        "\n",
+        "for i in range(2, num_+1) :\n",
+        "    print(p_tree_[i]) \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TH1Rf8RwuU1E",
+        "outputId": "43cc17e1-12c8-4fba-f48d-b3733edf8635"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "1 6\n",
+            "6 3\n",
+            "3 5\n",
+            "4 1\n",
+            "2 4\n",
+            "4 7\n",
+            "[0, 6, 4, 0, 1, 0, 1, 0]\n",
+            "[0, 6, 4, 0, 1, 0, 1, 4]\n",
+            "[0, 6, 4, 0, 1, 0, 1, 4]\n",
+            "[0, 6, 4, 0, 1, 0, 1, 4]\n",
+            "[0, 6, 4, 6, 1, 3, 1, 4]\n",
+            "[0, 6, 4, 6, 1, 3, 1, 4]\n",
+            "[0, 6, 4, 6, 1, 3, 1, 4]\n",
+            "4\n",
+            "6\n",
+            "1\n",
+            "3\n",
+            "1\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mXY3-oKG52Gp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1117,7 +1197,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNh6DfELE32d0FWlHyK6n7G",
+      "authorship_tag": "ABX9TyP7ltWYvI/8jdVji3KIxFYX",
       "include_colab_link": true
     },
     "kernelspec": {
