--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1150,7 +1150,7 @@
         "id": "TH1Rf8RwuU1E",
         "outputId": "43cc17e1-12c8-4fba-f48d-b3733edf8635"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1183,13 +1183,82 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#백준 1991번 트리 순회\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1991\n",
+        "\n",
+        "class Node:\n",
+        "  def __init__(self, item, left, right):\n",
+        "    self.item = item\n",
+        "    self.left = left\n",
+        "    self.right = right\n",
+        "\n",
+        "def preorder(node):\n",
+        "  print(node.item, end=\"\")\n",
+        "  if node.left != '.':\n",
+        "    preorder(tree[node.left])\n",
+        "  if node.right != '.':\n",
+        "    preorder(tree[node.right])\n",
+        "\n",
+        "def inorder(node):\n",
+        "  if node.left != '.':\n",
+        "    inorder(tree[node.left])\n",
+        "  print(node.item, end=\"\")\n",
+        "  if node.right != '.':\n",
+        "    inorder(tree[node.right])\n",
+        "\n",
+        "def postorder(node):\n",
+        "  if node.left != '.':\n",
+        "    postorder(tree[node.left])\n",
+        "  if node.right != '.':\n",
+        "    postorder(tree[node.right])\n",
+        "  print(node.item, end=\"\")\n",
+        "\n",
+        "n = int(input())\n",
+        "tree = {}\n",
+        "\n",
+        "for _ in range(n):\n",
+        "  node, left, right = map(str, input().split())\n",
+        "  tree[node] = Node(item=node, left=left, right=right)\n",
+        "\n",
+        "preorder(tree['A'])\n",
+        "print('')\n",
+        "inorder(tree['A'])\n",
+        "print('')\n",
+        "postorder(tree['A'])\n",
+        "\n",
+        "#A B C\n",
+        "#B D .\n",
+        "#C E F\n",
+        "#E . .\n",
+        "#F . G\n",
+        "#D . .\n",
+        "#G . ."
       ],
       "metadata": {
-        "id": "mXY3-oKG52Gp"
+        "id": "mXY3-oKG52Gp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "491405cb-4133-4090-8c42-ecf2d3658369"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "A B C\n",
+            "B D .\n",
+            "C E F\n",
+            "E . .\n",
+            "F . G\n",
+            "D . .\n",
+            "G . .\n",
+            "ABDCEFGDBAECFGDBEGFCA"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1197,7 +1266,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7ltWYvI/8jdVji3KIxFYX",
+      "authorship_tag": "ABX9TyOmeAzHUifdFIfOFdXDWGiz",
       "include_colab_link": true
     },
     "kernelspec": {
