--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1241,7 +1241,7 @@
         },
         "outputId": "491405cb-4133-4090-8c42-ecf2d3658369"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,6 +1259,279 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1260번 DFS와 BFS 단계\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1260\n",
+        "\n",
+        "from collections import deque\n",
+        "A, B, C = map(int,input().split())  \n",
+        " \n",
+        "graph = [[] for _ in range(A+1)]\n",
+        "dfs_visited = [False] * (A + 1)\n",
+        "bfs_visited = [False] * (A + 1)\n",
+        "\n",
+        "def dfs(c):\n",
+        "    print(c, end=' ')\n",
+        "    dfs_visited[c] = True\n",
+        "    for i in graph[c]:\n",
+        "        if not dfs_visited[i]:\n",
+        "            dfs(i)\n",
+        "def bfs(c): \n",
+        "    que = deque([c])\n",
+        "    bfs_visited[c] = True \n",
+        "    while que:\n",
+        "      v = que.popleft()\n",
+        "      print(v, end= ' ')\n",
+        "      for i in graph[v]:\n",
+        "        if not bfs_visited[i]:\n",
+        "            que.append(i)\n",
+        "            bfs_visited[i] = True\n",
+        "\n",
+        "\n",
+        "for _ in range(B):\n",
+        "    a, b = map(int,input().split())  \n",
+        "    graph[a].append(b)\n",
+        "    graph[b].append(a) \n",
+        "for i in range(1, A+1):\n",
+        "    graph[i].sort()\n",
+        "\n",
+        "dfs(C)\n",
+        "print()\n",
+        "bfs(C)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8pwxM3yyLLTw",
+        "outputId": "3dac87c0-4ef6-4a46-9c73-380279e9ea20"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 5 1\n",
+            "1 2\n",
+            "1 3\n",
+            "1 4\n",
+            "2 4\n",
+            "3 4\n",
+            "1 2 4 3 \n",
+            "1 2 3 4 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2606번 바이러스\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2606\n",
+        "\n",
+        "#7\n",
+        "#6\n",
+        "#1 2\n",
+        "#2 3\n",
+        "#1 5\n",
+        "#5 2\n",
+        "#5 6\n",
+        "#4 7\n",
+        "from collections import deque\n",
+        "\n",
+        "A = int(input())\n",
+        "B = int(input())\n",
+        "graph = [[] for _ in range(A+1)]\n",
+        "bfs_visited = [False] * (A + 1)\n",
+        "num_ = 0 \n",
+        "def BFS(C):\n",
+        "    global num_ \n",
+        "    que = deque([C])\n",
+        "    bfs_visited[C] = True \n",
+        "    while que:\n",
+        "      v = que.popleft()\n",
+        "      for i in graph[v]:\n",
+        "        if not bfs_visited[i]:\n",
+        "            que.append(i)\n",
+        "            bfs_visited[i] = True\n",
+        "            num_ += 1 \n",
+        "for _ in range(B):\n",
+        "    a, b = map(int,input().split())  \n",
+        "    graph[a].append(b)\n",
+        "    graph[b].append(a) \n",
+        "\n",
+        "BFS(1)\n",
+        "print(num_) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W2G85v43cgHB",
+        "outputId": "1be81cee-43b8-47fd-8a0a-f16d7b4983bc"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "6\n",
+            "1 2\n",
+            "2 3\n",
+            "1 5\n",
+            "5 2\n",
+            "5 6\n",
+            "4 7\n",
+            "4\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2667번 단지번호붙이기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2667\n",
+        "#0110100\n",
+        "#0110101\n",
+        "#1110101\n",
+        "#0000111\n",
+        "#0100000\n",
+        "#0111110\n",
+        "#0111000\n",
+        "import sys\n",
+        "\n",
+        "num_ = int(input())\n",
+        "graph = []\n",
+        "for _ in range(num_):\n",
+        "  graph.append(list(map(int, input())))\n",
+        "\n",
+        "\n",
+        "def dfs(x, y):\n",
+        "  if x <= -1 or y <= -1 or x >= num_ or y >= num_:\n",
+        "    return False\n",
+        "  global A\n",
+        "  if graph[x][y] == 1:\n",
+        "    A += 1   \n",
+        "    graph[x][y] = 0\n",
+        "    dfs(x-1,y)\n",
+        "    dfs(x,y-1)\n",
+        "    dfs(x+1,y)\n",
+        "    dfs(x,y+1)\n",
+        "    return True\n",
+        "  return False\n",
+        "\n",
+        "result = 0\n",
+        "A = 0 \n",
+        "result_ = []\n",
+        "for i in range(num_):  \n",
+        "  for j in range(num_): \n",
+        "    if dfs(i,j) == True: \n",
+        "      result_.append(A)\n",
+        "      A = 0\n",
+        "      result += 1\n",
+        "result_.sort()\n",
+        "print(result)\n",
+        "for i in result_:\n",
+        "  print(i)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iQIWLC3yfvKf",
+        "outputId": "de5f0d4c-6c4e-4b41-c160-64c0010ab667"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "0110100\n",
+            "0110101\n",
+            "1110101\n",
+            "0000111\n",
+            "0100000\n",
+            "0111110\n",
+            "0111000\n",
+            "3\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1012번 유기농\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1012\n",
+        "import sys\n",
+        "sys.setrecursionlimit(10**6)\n",
+        "\n",
+        "num_ = int(input())\n",
+        "  \n",
+        "def DFS(x, y, gr):\n",
+        "   if x <= -1 or y <= -1 or x >= A or y >= B:\n",
+        "    return False\n",
+        "   if gr[x][y] == 1:\n",
+        "     gr[x][y] = 0\n",
+        "     DFS(x-1,y,gr)\n",
+        "     DFS(x+1,y,gr)\n",
+        "     DFS(x,y-1,gr)\n",
+        "     DFS(x,y+1,gr)\n",
+        "     return True\n",
+        "   return False \n",
+        "\n",
+        "for _ in range(num_): \n",
+        "  A, B, C = map(int,input().split())  \n",
+        "  result_ = 0\n",
+        "  graph = [[0]*B for _ in range(A)]\n",
+        "  for _ in range(C):\n",
+        "    D, E = map(int,input().split())  \n",
+        "    graph[D][E] = 1 \n",
+        "  for i in range(A):\n",
+        "    for j in range(B):\n",
+        "      if DFS(i,j,graph) == True:\n",
+        "          result_ += 1 \n",
+        "  print(result_) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "spHBCHh0WDKt",
+        "outputId": "ae045297-a8fd-483f-9368-6bba2e358ea4"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "5 3 6\n",
+            "0 2\n",
+            "1 2\n",
+            "2 2\n",
+            "3 2\n",
+            "4 2\n",
+            "4 0\n",
+            "2\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1266,7 +1539,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOmeAzHUifdFIfOFdXDWGiz",
+      "authorship_tag": "ABX9TyO7pGxyzREuCK4cg5pm+Z87",
       "include_colab_link": true
     },
     "kernelspec": {
