Colaboratory를 통해 생성됨

--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1309,7 +1309,7 @@
         "id": "8pwxM3yyLLTw",
         "outputId": "3dac87c0-4ef6-4a46-9c73-380279e9ea20"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1374,7 +1374,7 @@
         "id": "W2G85v43cgHB",
         "outputId": "1be81cee-43b8-47fd-8a0a-f16d7b4983bc"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1450,7 @@
         "id": "iQIWLC3yfvKf",
         "outputId": "de5f0d4c-6c4e-4b41-c160-64c0010ab667"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1514,7 +1514,7 @@
         "id": "spHBCHh0WDKt",
         "outputId": "ae045297-a8fd-483f-9368-6bba2e358ea4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,6 +1532,252 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2178번 미로찾기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2178\n",
+        "from collections import deque\n",
+        "\n",
+        "A, B = map(int,input().split())  \n",
+        "\n",
+        "#상 하 좌 우\n",
+        "xd = [-1,1,0,0]\n",
+        "yd = [0,0,-1,+1]\n",
+        "graph = [] \n",
+        "for _ in range(A):\n",
+        "  graph.append(list(map(int, input())))\n",
+        "\n",
+        "list_ = [[1, 0, 1, 1, 1, 1],\n",
+        "         [1, 0, 1, 0, 1, 0], \n",
+        "         [1, 0, 1, 0, 1, 1],\n",
+        "         [1, 1, 1, 0, 1, 1]]\n",
+        "\n",
+        "def BFS(x,y):\n",
+        "  que = deque()\n",
+        "  que.append((x,y))\n",
+        "  while que:\n",
+        "    x, y = que.popleft()\n",
+        "    for i in range(4):\n",
+        "      nx = x + xd[i]\n",
+        "      ny = y + yd[i]\n",
+        "      if nx < 0 or ny < 0 or nx >= A or ny >= B:\n",
+        "        continue\n",
+        "      if list_[nx][ny] == 0:\n",
+        "         continue\n",
+        "      if list_[nx][ny] == 1:\n",
+        "        list_[nx][ny] = list_[x][y] + 1\n",
+        "        que.append((nx,ny))  \n",
+        "  return list_[-1][-1] \n",
+        "\n",
+        "  \n",
+        "print(BFS(0,0))\n",
+        "#101111\n",
+        "#101010\n",
+        "#101011\n",
+        "#111011"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ibOVZ1pOjzX9",
+        "outputId": "208d9a37-c690-48b5-ac63-edc22a4145b5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 6\n",
+            "[[3, 0, 9, 10, 11, 12], [2, 0, 8, 0, 12, 0], [3, 0, 7, 0, 13, 14], [4, 5, 6, 0, 14, 15]]\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1697번 숨바꼭질\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1697\n",
+        "\n",
+        "from collections import deque\n",
+        "\n",
+        "A, B = map(int,input().split())  \n",
+        "dist = [0] * (100000+1)\n",
+        "\n",
+        "def BFS(A):\n",
+        "  que = deque()\n",
+        "  que.append(A)\n",
+        "  while que:\n",
+        "    x = que.popleft()\n",
+        "    if x == B:\n",
+        "       print(dist[x])\n",
+        "       break\n",
+        "    for i in ( x-1, x +1, x*2 ):\n",
+        "       if 0 <= i <= 100000 and not dist[i]:\n",
+        "         dist[i] = dist[x] + 1\n",
+        "         que.append(i)\n",
+        "BFS(A)\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AUveko3jUeB2",
+        "outputId": "70acf47a-07ca-4a5c-fe57-7a32ea147697"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 17\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2206번 숨바꼭질\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2206\n",
+        "from collections import deque\n",
+        "\n",
+        "A, B = map(int,input().split())\n",
+        " \n",
+        "#상 하 좌 우\n",
+        "xd = [-1,1,0,0]\n",
+        "yd = [0,0,-1,+1]\n",
+        "\n",
+        "\n",
+        "def BFS(startx,starty,crash):\n",
+        "  graph = [list(map(int, input())) for _ in range(A)]\n",
+        "  visited = [[[0] * 2 for _ in range(B)] for _ in range(A)] \n",
+        "  # 3차원 배열을 사용해야합니다. 벽부수고 안부수고 = crash\n",
+        "  que = deque()\n",
+        "  que.append((startx,starty,crash))\n",
+        "  visited[startx][starty][crash] = 1\n",
+        "  \n",
+        "  while que:\n",
+        "    x,y,crash = que.popleft()\n",
+        "    if x == A - 1 and y == B - 1:\n",
+        "      return visited[x][y][crash]\n",
+        "    for i in range(4):\n",
+        "      nx = x + xd[i]\n",
+        "      ny = y + yd[i] \n",
+        "      if nx <= -1 or ny <= -1 or nx >= A or ny >= B:\n",
+        "        continue  \n",
+        "      if graph[nx][ny] == 0 and visited[nx][ny][crash] == 0:\n",
+        "        que.append((nx, ny, crash))\n",
+        "        visited[nx][ny][crash] = visited[x][y][crash] + 1 \n",
+        "      if graph[nx][ny] == 1 and crash == 0:\n",
+        "        que.append((nx, ny, crash + 1))\n",
+        "        visited[nx][ny][crash + 1] = visited[x][y][crash] + 1\n",
+        "  return -1\n",
+        "\n",
+        "print(BFS(0,0,0))\n",
+        "    #Something\n",
+        "#6 4\n",
+        "#0100\n",
+        "#1110\n",
+        "#1000\n",
+        "#0000\n",
+        "#0111\n",
+        "#0000"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MX82edbrcGa-",
+        "outputId": "d992670c-f96a-4bc2-d7e9-70e1cbedc1ee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 4\n",
+            "0100\n",
+            "1110\n",
+            "1000\n",
+            "0000\n",
+            "0111\n",
+            "0000\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 9184번 신나는 함수 실행\n",
+        "#문제 URL : https://www.acmicpc.net/problem/9184\n",
+        "\n",
+        "import sys \n",
+        "input = sys.stdin.readline\n",
+        " \n",
+        "dp_ = [[[0]*(21) for _ in range(21)] for _ in range(21)]\n",
+        "\n",
+        "def fibo(a,b,c): \n",
+        "  if a <= 0 or b <= 0 or c <= 0:\n",
+        "    return 1\n",
+        "  if a > 20 or b > 20 or c > 20:\n",
+        "    return fibo(20,20,20)\n",
+        "  if dp_[a][b][c]:\n",
+        "    return dp_[a][b][c]\n",
+        "  if a<b<c: \n",
+        "    dp_[a][b][c] = fibo(a,b,c-1)+fibo(a,b-1,c-1)-fibo(a, b-1, c) \n",
+        "    return dp_[a][b][c] \n",
+        "  dp_[a][b][c]=fibo(a-1, b, c) + fibo(a-1, b-1, c) + fibo(a-1, b, c-1) - fibo(a-1, b-1, c-1)\n",
+        "  return dp_[a][b][c]\n",
+        "\n",
+        " \n",
+        "while True:\n",
+        "  A,B,C =  map(int, input().split())\n",
+        "  if A == -1 and B == -1 and C == -1:\n",
+        "    break\n",
+        "  print(f'w({A}, {B}, {C}) = {fibo(A,B,C)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WgFphhuJcRei",
+        "outputId": "3537ea5c-995a-438a-88cd-2410b56fd9d8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 1 1\n",
+            "w(1, 1, 1) = 2\n",
+            "-1 -1 -1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mtgmp2bnJ-7i"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1539,7 +1785,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7pGxyzREuCK4cg5pm+Z87",
+      "authorship_tag": "ABX9TyPMvoBpvl6DF5eybaZs3X9m",
       "include_colab_link": true
     },
     "kernelspec": {
