Colaboratory를 통해 생성됨

--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1771,10 +1771,67 @@
     {
       "cell_type": "code",
       "source": [
+        "#백준 7562번 나이트의 이동\n",
+        "#문제 URL : https://www.acmicpc.net/problem/7562\n",
+        "from collections import deque\n",
+        "\n",
+        "num_ = int(input())\n",
+        "# 나이트 이동\n",
+        "dx = [-1, -2, -2, -1, 1, 2, 2, 1]\n",
+        "dy = [2, 1, -1, -2, -2, -1, 1, 2]\n",
+        "\n",
+        "def bfs(start_X, start_Y, end_X, end_Y):\n",
+        "  que = deque()\n",
+        "  que.append([start_X, start_Y])\n",
+        "  list_[start_X][start_Y] = 1\n",
+        "  while que:\n",
+        "    A, B = que.popleft()\n",
+        "    if A == end_X and B == end_Y:\n",
+        "       print(list_[end_X][end_Y] -1)\n",
+        "       return\n",
+        "    for i in range(8):\n",
+        "      x = A + dx[i]\n",
+        "      y = B + dy[i]\n",
+        "      if 0 <= x < n and 0 <= y < n and list_[x][y] == 0:\n",
+        "        que.append([x, y])\n",
+        "        list_[x][y] = list_[A][B] + 1 \n",
+        " \n",
+        "for _ in range(num_):\n",
+        "  n = int(input())\n",
+        "  list_ = [[0] * n for _ in range(n)] \n",
+        "  start_x, start_y =  map(int,input().split())\n",
+        "  end_x, end_y =  map(int,input().split())\n",
+        "  bfs(start_x, start_y, end_x, end_y)\n"
+      ],
+      "metadata": {
+        "id": "mtgmp2bnJ-7i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "86bc2b1f-ee3f-44c9-c3c1-7b67381a92e6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "8\n",
+            "0 0\n",
+            "7 0\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "mtgmp2bnJ-7i"
+        "id": "HGEVtK2KBkTv"
       },
       "execution_count": null,
       "outputs": []
@@ -1785,7 +1842,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMvoBpvl6DF5eybaZs3X9m",
+      "authorship_tag": "ABX9TyPWtn9IgIE0VjNxCVSlsT8X",
       "include_colab_link": true
     },
     "kernelspec": {
