Colaboratory를 통해 생성됨

--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1810,7 +1810,7 @@
         },
         "outputId": "86bc2b1f-ee3f-44c9-c3c1-7b67381a92e6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1828,10 +1828,153 @@
     {
       "cell_type": "code",
       "source": [
+        "#백준 9461번 파도반 수열\n",
+        "#문제 URL : https://www.acmicpc.net/problem/9461\n",
+        "\n",
+        "num_ = int(input())\n",
+        "\n",
+        "def solution(a): \n",
+        "  if a <= len(list_):\n",
+        "    print(list_[a-1])\n",
+        "    return\n",
+        "  A = 5\n",
+        "  while A < a:\n",
+        "    A += 1\n",
+        "    list_.append(list_[-1]+list_[-5]) \n",
+        "  print(list_[-1])\n",
+        "for _ in range(num_):\n",
+        "    list_ = [1, 1, 1, 2, 2]\n",
+        "    A = int(input()) \n",
+        "    solution(A) \n",
+        "    \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGEVtK2KBkTv",
+        "outputId": "71f89832-ee57-4470-fa8c-353e84e49f01"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1927번 최소 힙\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1927\n",
+        "import heapq\n",
+        "import sys \n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for _ in range(num_):\n",
+        "  A = int(input())\n",
+        "  if A == 0:\n",
+        "    if list_:\n",
+        "      print(heapq.heappop(list_))\n",
+        "    else:\n",
+        "      print(0)\n",
+        "  else:\n",
+        "    heapq.heappush(list_,A) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "72Juw9zUkh06",
+        "outputId": "f733d496-4cc4-44b7-b9c1-4e8437826722"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "0\n",
+            "0\n",
+            "12345678\n",
+            "1\n",
+            "2\n",
+            "0\n",
+            "1\n",
+            "0\n",
+            "2\n",
+            "0\n",
+            "12345678\n",
+            "0\n",
+            "0\n",
+            "32\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2798번 블랙잭\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2798\n",
+        "\n",
+        "A , B = map(int, input().split())\n",
+        "list_ = list(map(int, input().split()))\n",
+        "\n",
+        "re_  = 0\n",
+        "for i in range(A):\n",
+        "  for j in range(i+1, A):\n",
+        "    for z in range(j+1, A):\n",
+        "      if list_[i] + list_[j] + list_[z] > B:\n",
+        "        continue\n",
+        "      else:\n",
+        "        re_ = max(re_, list_[i] + list_[j] + list_[z])\n",
+        "print(re_)\n"
+      ],
+      "metadata": {
+        "id": "EHQ26pQ9wpcH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10307bf2-d80d-4f78-ceee-41ebd8cd6d4f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 21\n",
+            "5 6 7 8 9\n",
+            "21\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "HGEVtK2KBkTv"
+        "id": "OEdXpoi3zEZu"
       },
       "execution_count": null,
       "outputs": []
@@ -1842,7 +1985,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWtn9IgIE0VjNxCVSlsT8X",
+      "authorship_tag": "ABX9TyOjTxPWKHlDPZR8vtscfCz/",
       "include_colab_link": true
     },
     "kernelspec": {
