--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1955,7 +1955,7 @@
         },
         "outputId": "10307bf2-d80d-4f78-ceee-41ebd8cd6d4f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1971,7 +1971,18 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#백준 1149번 RGB거리\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1149\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for i in range(num_):\n",
+        "    list_.append(list(map(int, input().split())))\n",
+        "for i in range(1, len(list_)):\n",
+        "    list_[i][0] = min(list_[i - 1][1], list_[i - 1][2]) + list_[i][0]\n",
+        "    list_[i][1] = min(list_[i - 1][0], list_[i - 1][2]) + list_[i][1]\n",
+        "    list_[i][2] = min(list_[i - 1][0], list_[i - 1][1]) + list_[i][2]\n",
+        "print(min(list_[num_ - 1][0], list_[num_ - 1][1], list_[num_ - 1][2]))"
       ],
       "metadata": {
         "id": "OEdXpoi3zEZu"
@@ -1985,7 +1996,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOjTxPWKHlDPZR8vtscfCz/",
+      "authorship_tag": "ABX9TyPU00n1cKiFC3svMilxycHf",
       "include_colab_link": true
     },
     "kernelspec": {
