--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -1989,6 +1989,68 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1920번 수찾기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1920\n",
+        "\n",
+        "\n",
+        "def binary_search(target, data): \n",
+        "    start = 0\n",
+        "    end = len(data) - 1 \n",
+        "    while start <= end:\n",
+        "        mid = (start + end) // 2 \n",
+        "        if data[mid] == target:\n",
+        "            return True  \n",
+        "        elif data[mid] < target:\n",
+        "            start = mid + 1\n",
+        "        else:\n",
+        "            end = mid -1 \n",
+        "    return False\n",
+        "\n",
+        "\n",
+        " \n",
+        "A  = int(input())\n",
+        "list_ = list(map(int, input().split())) \n",
+        "B  = int(input())\n",
+        "list_2 = list(map(int, input().split())) \n",
+        "list_.sort()  \n",
+        "for i in list_2:\n",
+        "  if binary_search(i,list_):\n",
+        "    print(1)\n",
+        "  else:\n",
+        "    print(0)\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-FG-rg4HA3R7",
+        "outputId": "309d909a-e568-4734-bb52-09d3c31b049c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4 1 5 2 3\n",
+            "5\n",
+            "1 3 7 9 5\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[1, 3, 7, 9, 5]\n",
+            "0\n",
+            "2\n",
+            "None\n",
+            "None\n",
+            "4\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1996,7 +2058,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPU00n1cKiFC3svMilxycHf",
+      "authorship_tag": "ABX9TyMMC26Vc/pM+cgpGdli/I8o",
       "include_colab_link": true
     },
     "kernelspec": {
