Colaboratory를 통해 생성됨

--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -2026,28 +2026,82 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 139
         },
         "id": "-FG-rg4HA3R7",
-        "outputId": "309d909a-e568-4734-bb52-09d3c31b049c"
+        "outputId": "01231071-fcc4-4135-8ab5-29a3e683a2dd"
       },
-      "execution_count": 11,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-eee96eeb1605>\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    binary_search(i,list_):\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 10815번 숫자 카드 2\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10815\n",
+        "#10\n",
+        "#6 3 2 10 10 10 -10 -10 7 3\n",
+        "#8\n",
+        "#10 9 -5 2 3 4 5 -10\n",
+        "  \n",
+        " \n",
+        "A  = int(input())\n",
+        "list_ = list(map(int, input().split())) \n",
+        "B  = int(input())\n",
+        "list_2 = list(map(int, input().split())) \n",
+        "\n",
+        "def binary_search(n, N, start, end):\n",
+        "    if start > end:\n",
+        "        return 0\n",
+        "    mid_ = (start+end)//2\n",
+        "    if n == N[mid_]:\n",
+        "        return N[start:end+1].count(n)\n",
+        "    elif n < N[mid_]:\n",
+        "        return binary_search(n, N, start, mid_-1)\n",
+        "    else:\n",
+        "        return binary_search(n, N, mid_+1, end)\n",
+        "\n",
+        "dic_ = {}\n",
+        "for n in list_:\n",
+        "    start = 0\n",
+        "    end = len(list_) - 1\n",
+        "    if n not in dic_:\n",
+        "        dic_[n] = binary_search(n, list_, start, end)\n",
+        "for i in list_2:\n",
+        "  if i in dic_:\n",
+        "    print(dic_[i], end = ' ')\n",
+        "  else:\n",
+        "    print('0', end = ' ')\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qyhiVGxynY2o",
+        "outputId": "a0961cf5-2ed2-41e9-f68e-628aa5df7f26"
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n",
-            "4 1 5 2 3\n",
-            "5\n",
-            "1 3 7 9 5\n",
-            "[1, 2, 3, 4, 5]\n",
-            "[1, 3, 7, 9, 5]\n",
-            "0\n",
-            "2\n",
-            "None\n",
-            "None\n",
-            "4\n"
+            "10\n",
+            "6 3 2 10 10 10 -10 -10 7 3\n",
+            "8\n",
+            "10 9 -5 2 3 4 5 -10\n",
+            "3 0 0 0 1 0 0 0 "
           ]
         }
       ]
@@ -2058,7 +2112,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMC26Vc/pM+cgpGdli/I8o",
+      "authorship_tag": "ABX9TyMxKzaj0HQnlh+CSUpYObO0",
       "include_colab_link": true
     },
     "kernelspec": {
