Colaboratory를 통해 생성됨

--- a/BaekJoonCode_Back.ipynb
+++ b/BaekJoonCode_Back.ipynb
@@ -2032,7 +2032,7 @@
         "id": "-FG-rg4HA3R7",
         "outputId": "01231071-fcc4-4135-8ab5-29a3e683a2dd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2091,7 +2091,7 @@
         "id": "qyhiVGxynY2o",
         "outputId": "a0961cf5-2ed2-41e9-f68e-628aa5df7f26"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2105,6 +2105,85 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11286번 절댓값 힙\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11286\n",
+        "import heapq\n",
+        "import sys \n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "heap = [] \n",
+        "num_ = int(input()) \n",
+        "for _ in range(num_):\n",
+        "  A = int(input())\n",
+        "  if A != 0:\n",
+        "    heapq.heappush(heap, (abs(A), A))\n",
+        "  else: \n",
+        "    if not heap:\n",
+        "      print(0)\n",
+        "    else:\n",
+        "      print(heapq.heappop(heap)[1])\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zNygX4cpD2P7",
+        "outputId": "c902dfd1-3b46-430c-be0f-aed61fc6dd9d"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n",
+            "1\n",
+            "-1\n",
+            "0\n",
+            "-1  = \n",
+            "0\n",
+            "1  = \n",
+            "0\n",
+            "0  = \n",
+            "1\n",
+            "1\n",
+            "-1\n",
+            "-1\n",
+            "2\n",
+            "-2\n",
+            "0\n",
+            "-1  = \n",
+            "0\n",
+            "-1  = \n",
+            "0\n",
+            "1  = \n",
+            "0\n",
+            "1  = \n",
+            "0\n",
+            "-2  = \n",
+            "0\n",
+            "2  = \n",
+            "0\n",
+            "0  = \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PwrpDM8REMCI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -2112,7 +2191,7 @@
       "name": "BaekJoonCode_Back.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxKzaj0HQnlh+CSUpYObO0",
+      "authorship_tag": "ABX9TyMXtUZD752sQWAF1MzdmSay",
       "include_colab_link": true
     },
     "kernelspec": {
